# ai-infra-learning

./: .gitignore  CODE_OF_CONDUCT.md  CURRICULUM.md  README.md  VERSIONS.md  requirements.txt
engineer-track/: CONTRIBUTING.md  CURRICULUM.md  GETTING_STARTED.md  Makefile  README.md  pyproject.toml  requirements.txt
engineer-track/assessments/: README.md
engineer-track/assessments/quizzes/answer-keys/: README.md  module-01-answers.md  module-02-answers.md  module-03-answers.md  module-04-answers.md  module-05-answers.md  module-06-answers.md  module-07-answers.md  module-08-answers.md  module-09-answers.md  module-10-answers.md
engineer-track/community/: CONTRIBUTING.md  README.md
engineer-track/curriculum/: project-specifications.json
engineer-track/lessons/mod-101-foundations/: resources.md
engineer-track/lessons/mod-101-foundations/exercises/: exercise-03-kubernetes.md
engineer-track/lessons/mod-101-foundations/labs/: README.md  lab-01-python-dev-environment.md  lab-02-first-docker-container.md  lab-03-local-kind-cluster.md  lab-04-serve-sklearn-model.md  lab-05-instrument-with-prometheus.md
engineer-track/lessons/mod-102-cloud-computing/: README.md
engineer-track/lessons/mod-102-cloud-computing/labs/: README.md  lab-01-aws-ml-infra.md  lab-02-gcp-ml-infra.md  lab-03-azure-ml-infra.md  lab-04-multi-cloud-deployment.md
engineer-track/lessons/mod-103-containerization/: 07-gpu-docker.md
engineer-track/lessons/mod-103-containerization/exercises/: exercise-01-dockerfile.md  exercise-02-multi-container.md  exercise-03-gpu-container.md
engineer-track/lessons/mod-103-containerization/labs/: README.md  lab-01-dockerfile-optimization.md  lab-02-multi-stage-builds.md  lab-03-docker-compose-stack.md  lab-04-gpu-docker.md  lab-05-private-registry.md  lab-06-container-security-scanning.md
engineer-track/lessons/mod-104-kubernetes/labs/: README.md  lab-01-pod-deployment.md  lab-02-service-discovery.md  lab-03-configmaps-secrets.md  lab-04-persistent-volumes.md  lab-05-helm-chart.md  lab-06-hpa.md  lab-07-network-policies.md  lab-08-debugging.md
engineer-track/lessons/mod-105-data-pipelines/: 05-data-processing-spark.md  06-streaming-data-kafka.md  08-pipeline-monitoring-errors.md
engineer-track/lessons/mod-105-data-pipelines/labs/: README.md  lab-01-airflow-local.md  lab-02-dag-development.md  lab-03-spark-job.md  lab-04-kafka-streaming.md  lab-05-dvc-versioning.md  lab-06-data-quality.md
engineer-track/lessons/mod-105-data-pipelines/quizzes/: module-quiz.md
engineer-track/lessons/mod-106-mlops/: 03-model-registry-versioning.md
engineer-track/lessons/mod-106-mlops/labs/: README.md  lab-01-mlflow-tracking.md  lab-02-model-registry.md  lab-03-feature-store.md  lab-04-cicd-models.md  lab-05-canary-deployment.md  lab-06-ab-testing.md  lab-07-drift-monitoring.md
engineer-track/lessons/mod-107-gpu-computing/labs/: README.md  lab-01-cuda-hello-world.md  lab-02-pytorch-gpu-inference.md  lab-03-multi-gpu-training.md  lab-04-gpu-cluster-on-k8s.md  lab-05-mixed-precision.md  lab-06-memory-profiling.md
engineer-track/lessons/mod-108-monitoring-observability/labs/: README.md  lab-01-prometheus-instrumentation.md  lab-02-grafana-dashboards.md  lab-03-loki-logging.md  lab-04-distributed-tracing.md  lab-05-alerting-rules.md
engineer-track/lessons/mod-109-infrastructure-as-code/labs/: README.md  lab-01-terraform-aws-vpc.md  lab-02-terraform-eks.md  lab-03-terraform-state-backend.md  lab-04-pulumi-multicloud.md  lab-05-iac-cicd.md  lab-06-secret-management.md  lab-07-policy-as-code.md
engineer-track/lessons/mod-109-infrastructure-as-code/quizzes/: module-quiz.md
engineer-track/lessons/mod-110-llm-infrastructure/labs/: README.md  lab-01-vllm-deployment.md  lab-02-rag-pipeline.md  lab-03-vector-db-qdrant.md  lab-04-lora-finetune.md  lab-05-streaming-responses.md  lab-06-cost-monitoring.md  lab-07-prompt-injection-defense.md  lab-08-multi-model-serving.md
engineer-track/projects/project-103-llm-deployment/docs/: TROUBLESHOOTING.md
engineer-track/projects/project-103-llm-deployment/prompts/: README.md
engineer-track/resources/: faq.md
engineer-track/resources/reading-lists/: advanced-engineer-path.md  staff-engineer-path.md
specializations/mlops/: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRICULUM.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
specializations/mlops/assessments/: README.md
specializations/mlops/assessments/practical-exams/: exam-01-pipeline-design.md
specializations/mlops/assessments/quizzes/: midterm.md
specializations/mlops/assessments/rubrics/: exam-01.md
specializations/mlops/lessons/: README.md
specializations/mlops/lessons/mod-001-mlops-foundations/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-002-experiment-tracking/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-003-model-monitoring/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-004-data-quality/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-005-experimentation/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-006-automation/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-007-governance/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-008-production-ops/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-009-security/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/lessons/mod-010-advanced-topics/: README.md  lecture-notes.md  quiz.md  resources.md
specializations/mlops/projects/: README.md
specializations/mlops/projects/project-01-ml-pipeline/: .env.example  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  Makefile  PROJECT_STRUCTURE.txt  README.md  REQUIREMENTS.md  VALIDATION.md  docker-compose.yml  pytest.ini  requirements-dev.txt  (+1 more)
(+1952 files in other folders)
