[project]
name = "ai-infra-engineer-learning"
version = "1.1.0"
description = "AI Infrastructure Engineer learning curriculum"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Infrastructure Curriculum Team" }]
keywords = [
    "ai", "ml", "infrastructure", "kubernetes", "mlops", "llm",
    "learning", "curriculum",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes / warnings
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehensions
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in defaults are common with FastAPI Depends()
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["projects/*/tests"]
markers = [
    "unit: fast, no external dependencies",
    "integration: requires running services (DB, message broker, etc.)",
    "slow: takes more than ~5 seconds",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "build",
    "dist",
    "venv",
]
